--- a/css/main.css
+++ b/css/main.css
@@ -8,10 +8,16 @@ nav li a{
   border-bottom: 2px solid #0084a6;
 }
 
+nav li a:hover {
+  color: #e2e2e2;
+  border-color: #e2e2e2;
+}
+
 header, section {
   border-bottom: 1px solid #e2e2e2;
 }
 
 .btn-ghost {
-  color: #8bc9d9;
+  color: #0084a6;
+  border-color: #8bc9d9;
 }
