--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html {
 nav li a{
   color: #005e76;
   text-decoration: none;
-  border-bottom: 2px solid #0084a6;
+  border-bottom: 2px solid #8bc9d9;
 }
 
 nav li a:hover {
@@ -13,7 +13,7 @@ nav li a:hover {
   border-color: #e2e2e2;
 }
 
-header, section {
+header, section, article {
   border-bottom: 1px solid #e2e2e2;
 }
 
