--- a/css/main.css
+++ b/css/main.css
@@ -4,13 +4,15 @@ html {
 
 nav li a {
   color: #005e76;
+  background-color: #fff;
   text-decoration: none;
-  border-bottom: 2px solid #8bc9d9;
+  border-bottom: 1px solid #8bc9d9;
 }
 
 nav li a:hover {
   color: #000;
-  border-color: #005e76;
+  background-color: #fff;
+  border-color: #0084a6;
 }
 
 section {
@@ -23,21 +25,33 @@ article {
 }
 
 .btn-ghost {
-  color: #0084a6;
+  color: #005e76;
   border-color: #8bc9d9;
 }
 
 .btn-ghost:hover {
-  color: #0084a6;
-  border-color: #0084a6;
+  color: #005e76;
+  border-color: #005e76;
   background-color: #8bc9d9;
 }
 
-h1, h3, h4 {
+title p {
   font-family: "Noto Sans Japanese", sans-serif;
 }
 
 .skip-links a {
   position: absolute;
   top: -3em;
+}
+
+footer p {
+  color: #000;
+}
+
+@media only screen and (min-width: 60em) {
+
+  .title {
+    text-align: left;
+  }
+
 }
